# stemmers-rs

./: Cargo.toml  README  build.rs
languages/: README  russian.sbl
src/: lib.rs
